images refectored and deleted if unnessery
Signed-off-by: Aniela <e1456160@student.tuwien.ac.at>

--- a/src/main/resources/fxml/customerFrame.fxml
+++ b/src/main/resources/fxml/customerFrame.fxml
@@ -33,7 +33,7 @@
             <ImageView fx:id="logo" fitHeight="600" fitWidth="700" pickOnBounds="true" preserveRatio="true">
 
                <image>
-                  <Image url="/images/logo.png" />
+                  <Image url="/images/logos/openbooth_logo.png" />
                </image>
             </ImageView>
          </children>
