--- a/src/main/resources/css/customer.css
+++ b/src/main/resources/css/customer.css
@@ -1,7 +1,7 @@
 #basicpane{
  -fx-background-repeat: no-repeat;
    -fx-background-position: center;
-   -fx-background-size: cover;
+    -fx-background-image: url('/images/logos/openbooth_logo.png');
 }
 #logo{
  -fx-fitWidth: 5em;
