--- a/src/main/resources/fxml/loginFrame.fxml
+++ b/src/main/resources/fxml/loginFrame.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbooth.gui.LoginFrameController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" />
   </columnConstraints>
@@ -65,9 +65,26 @@
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <Button fx:id="confirmButton" mnemonicParsing="false" onMouseClicked="#onConfirmPressed" text="Login" textAlignment="CENTER" visible="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+                        <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#onConfirmPressed" onMouseClicked="#onConfirmPressed" text="Login" textAlignment="CENTER" visible="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
                      </children>
                   </GridPane>
+               </children>
+            </GridPane>
+            <GridPane GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="70.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="30.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints percentHeight="70.0" vgrow="SOMETIMES" />
+                <RowConstraints percentHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="abortButton" mnemonicParsing="false" onAction="#onAbortPressed" style="-fx-background-color: transparent;" text="Abbrechen" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
                </children>
             </GridPane>
          </children>
