--- a/src/main/resources/fxml/kameraFilterFrame.fxml
+++ b/src/main/resources/fxml/kameraFilterFrame.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" onKeyPressed="#triggerShot" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbooth.gui.CameraFilterController">
+<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#triggerShot" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbooth.gui.CameraFilterController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" percentWidth="100.0" />
   </columnConstraints>
@@ -35,7 +35,7 @@
             <Button fx:id="ontime" mnemonicParsing="false" onAction="#onTimerPressed" style="-fx-background-image: url('/images/timer.png');" GridPane.columnIndex="4" />
          </children>
       </GridPane>
-      <ScrollPane fx:id="filterscrollplanel" GridPane.rowIndex="1">
+      <ScrollPane fx:id="filterscrollplanel" hbarPolicy="NEVER" hmax="0.0" pannable="false" vbarPolicy="NEVER" onKeyPressed="#triggerShot" vmax="0.0" GridPane.rowIndex="1">
       </ScrollPane>
    </children>
 </GridPane>
