[Issue #28] Back button in login screen is available and works for closing the program and for redirecting back to the former frame.

--- a/src/main/resources/fxml/loginFrame.fxml
+++ b/src/main/resources/fxml/loginFrame.fxml
@@ -41,7 +41,7 @@
             </GridPane>
          </children>
       </GridPane>
-      <GridPane style="-fx-background-color: transperent;">
+      <GridPane style="-fx-background-color: transparent;">
          <columnConstraints>
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" percentWidth="100.0" />
          </columnConstraints>
