--- a/src/main/resources/fxml/logoFrame.fxml
+++ b/src/main/resources/fxml/logoFrame.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import org.openbooth.gui.specialCells.AutoCompleteTextField?>
+<?import org.openbooth.gui.specialcells.AutoCompleteTextField?>
 <TitledPane fx:id="logo" animated="false" prefHeight="522.0" text="Logoverwaltung" GridPane.rowIndex="2" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openbooth.gui.LogoFrameController">
         <content>
             <AnchorPane  maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" style="-fx-background-color: rgb(180,180,180,1);">
